Improved READMEs, added Jupyter notebook

--- a/{{cookiecutter.app_name}}/notebooks/{{cookiecutter.app_slug}}.ipynb
+++ b/{{cookiecutter.app_name}}/notebooks/{{cookiecutter.app_slug}}.ipynb
@@ -18,20 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "/Users/gherman/repos/github/deeplook/cookiecutter-scala/{{cookiecutter.app_name}}/target"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import java.io.File\n",
     "val targetPath: String = new File(\"../target\").getCanonicalPath\n",
@@ -39,33 +28,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting download from file:///Users/gherman/snippets/test_cookiecutter/hello/target/scala-2.12/hello_2.12-0.1.0.jar\n",
-      "Finished download of hello_2.12-0.1.0.jar\n"
-     ]
-    }
-   ],
    "source": [
-    "%AddJar file:///Users/gherman/snippets/test_cookiecutter/hello/target/scala-2.12/hello_2.12-0.1.0.jar -f"
+    "Expand the absolute path for the `%AddJar` magic command in the following cell to something like this (see also the prefix in the cell above): file:///path/to/{{cookiecutter.app_name}}/target/scala-2.12/{{cookiecutter.app_name}}_2.12-0.1.0.jar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%AddJar file:///.../{{cookiecutter.app_name}}/target/scala-2.12/{{cookiecutter.app_name}}_2.12-0.1.0.jar -f"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now we can use the functionality inside:"
+    "And now you can use the functionality inside the jar file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -76,17 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Main.main(Array())"
    ]
@@ -102,12 +81,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the Protobuf functionality seems to require loading the respective Jar file or the library:"
+    "Using the Protobuf functionality seems to require loading the respective jar file or the library:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -118,31 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name: Compile Error\n",
-       "Message: error: missing or invalid dependency detected while loading class file 'Person.class'.\n",
-       "Could not access term trueaccord in package com,\n",
-       "because it (or its dependencies) are missing. Check your build definition for\n",
-       "missing or conflicting dependencies. (Re-run with `-Ylog-classpath` to see the problematic classpath.)\n",
-       "A full rebuild may help if 'Person.class' was compiled against an incompatible version of com.\n",
-       "error: missing or invalid dependency detected while loading class file 'Person.class'.\n",
-       "Could not access type GeneratedMessageCompanion in value com.scalapb,\n",
-       "because it (or its dependencies) are missing. Check your build definition for\n",
-       "missing or conflicting dependencies. (Re-run with `-Ylog-classpath` to see the problematic classpath.)\n",
-       "A full rebuild may help if 'Person.class' was compiled against an incompatible version of com.scalapb.\n",
-       "StackTrace: "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val p = Person(name=Some(\"Joe\"))"
    ]
@@ -160,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
