Added tags to json4s and protobuf sections, and %ShowTypes at top

--- a/{{cookiecutter.app_name}}/notebooks/tutorial.ipynb
+++ b/{{cookiecutter.app_name}}/notebooks/tutorial.ipynb
@@ -11,6 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Preface\n",
+    "\n",
+    "Minor things to improve the user experience... (use `%LsMagic` to list all *magic* commands!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Types will be printed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ShowTypes on"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Main functionality\n",
     "\n",
     "First we load our package generated with `sbt package` as a jar file. This will have a path something like `/path/to/{{cookiecutter.app_slug}}/target/scala-X.Y/{{cookiecutter.app_slug}}_X.Y-{{cookiecutter.app_version}}.jar` and must be indicated as absolute file path:"
@@ -19,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import java.io.File\n",
@@ -37,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%AddJar file:///.../{{cookiecutter.app_name}}/target/scala-2.12/{{cookiecutter.app_name}}_2.12-0.1.0.jar -f"
@@ -64,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Main.main(Array())"
@@ -72,7 +104,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "protobuf"
+    ]
+   },
    "source": [
     "## Protobuf"
    ]
@@ -98,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val p = Person(name=Some(\"Joe\"))"
@@ -107,7 +145,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "tags": [
+     "json4s"
+    ]
    },
    "source": [
     "## Json4S\n",
